--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type='text/javascript' src='./js/main.js'></script>
 </head>
 <body>
-    
+    <h1>Clicker project</h1>
+    <div id="score">0</div>
 </body>
 </html>
