html base structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <script type='text/javascript' src='./js/main.js'></script>
 </head>
 <body>
-    <h1>Clicker project</h1>
-    <div id="score">0</div>
+    <div id="page">
+        <h1>Clicker project</h1>
+        <div id="main">
+            <div id="hScore">0</div>
+            <div id="hPerSecond">0 pts/second</div>
+            <button id="hClick">click here</button>
+        </div>
+        <div id="supplement">
+            <button id="hMultiplier">multiplier</button>
+            <button id="hAutoclick">autoclick</button>
+            <button id="hBonus">bonus</button>
+        </div>
+    </div>
 </body>
 </html>
