--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clicker project</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script type='text/javascript' src='./js/main.js'></script>
+    <script type='text/javascript' src='js/main.js'></script>
 </head>
 <body>
     <div id="page">
