add update display bps

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Clicker project</h1>
         <div id="main">
             <div id="hScore">0</div>
-            <div id="hPerSecond">0 pts/second</div>
+            <div id="hPerSecond">0 banana/second</div>
             <button id="hClick">click here</button>
         </div>
         <div id="supplement">
