--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clicker project</title>
+    <title>Jungle Banana Jungle</title>
     <link rel="stylesheet" href="./css/style.css">
     <script type='text/javascript' src='js/main.js'></script>
 </head>
 <body>
     <div id="page">
-        <h1>Clicker project</h1>
+        <h1>Jungle Banana Jungle</h1>
         <div id="main">
-            <div id="hScore">0</div>
-            <div id="hPerSecond">0 banana/second</div>
+            <div id="hScore">0 bananas</div>
+            <div id="hPerSecond">0 banana(s)/second</div>
             <button id="hClick">click here</button>
         </div>
         <div id="supplement">
