--- a/index.html
+++ b/index.html
@@ -23,5 +23,59 @@
             <button id="hBonus">bonus</button>
         </div>
     </div>
+    <div class="leafLeft">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+    </div>
+    <div class="leafTop">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
