wip leaf bckgnd

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <button id="hReset">reset memory</button>
         </div>
     </div>
+    <!-- Leaf background -->
+    <!-- Leaf left bot container -->
     <div class="leafLeft">
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark">
@@ -51,7 +53,8 @@
             </div>
         </div>
     </div>
-    <div class="leafTop">
+    <!-- Leaf left top container -->
+    <div class="leafLeft">
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark">
                 <div class="line lineLeafGreenDark"></div>
@@ -74,6 +77,120 @@
         </div>
         <div class="leaf5">
             <div class="shapeLeaf leafRed">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+    </div>
+    <!-- Leaf top container -->
+    <div class="leafTop">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+    </div>
+    <!-- Leaf right container -->
+    <div class="leafRight">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateRight">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateRight">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateRight">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateRight">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateRight">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+    </div>
+    <!-- Leaf bottom container -->
+    <div class="leafBot">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
                 <div class="line lineLeafRed"></div>
             </div>
         </div>
