wip leaf bckgnd

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <!-- Leaf background -->
     <!-- Leaf left bot container -->
-    <div class="leafLeft">
+    <div class="leafLeftBot">
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark">
                 <div class="line lineLeafGreenDark"></div>
@@ -54,7 +54,12 @@
         </div>
     </div>
     <!-- Leaf left top container -->
-    <div class="leafLeft">
+    <div class="leafLeftTop">
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark">
                 <div class="line lineLeafGreenDark"></div>
@@ -65,19 +70,14 @@
                 <div class="line lineLeafGreenMiddle"></div>
             </div>
         </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
         <div class="leaf3">
             <div class="shapeLeaf leafGreenLight">
                 <div class="line lineLeafLight"></div>
-            </div>
-        </div>
-        <div class="leaf4">
-            <div class="shapeLeaf leafWhite">
-                <div class="line lineLeafWhite"></div>
-            </div>
-        </div>
-        <div class="leaf5">
-            <div class="shapeLeaf leafRed">
-                <div class="line lineLeafRed"></div>
             </div>
         </div>
     </div>
