--- a/index.html
+++ b/index.html
@@ -320,6 +320,11 @@
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
     </div>
 
     <!--  -->
