--- a/index.html
+++ b/index.html
@@ -213,8 +213,6 @@
             </div>
         </div>
     </div>
-
-    <!--  -->
     <!-- Leaf top bot container -->
     <div class="leafTopBot">
         <div class="leaf1">
@@ -266,6 +264,16 @@
             <div class="shapeLeaf leafGreenLight rotateTopBot">
                 <div class="line lineLeafLight"></div>
             </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
         </div>
     </div>
     <!-- Leaf top top container -->
@@ -325,11 +333,19 @@
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
     </div>
-
-    <!--  -->
-    <!-- Leaf right container -->
-    <div class="leafRight">
+    <!-- Leaf right bot container -->
+    <div class="leafRightBot">
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark rotateRight">
                 <div class="line lineLeafGreenDark"></div>
@@ -355,7 +371,57 @@
                 <div class="line lineLeafRed"></div>
             </div>
         </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateRight">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateRight">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
     </div>
+    <!-- Leaf right top container -->
+    <div class="leafRightTop">
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateRight">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateRight">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateRight">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateRight">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateRight">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateRight">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateRight">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+    </div>
+
+    <!--  -->
     <!-- Leaf bottom container -->
     <div class="leafBot">
         <div class="leaf1">
