done leaf background

--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
-        <div class="leaf5">
-            <div class="shapeLeaf leafRed rotateTopBot">
-                <div class="line lineLeafRed"></div>
-            </div>
-        </div>
         <div class="leaf3">
             <div class="shapeLeaf leafGreenDark rotateTopBot">
                 <div class="line lineLeafGreenDark"></div>
             </div>  
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
+            </div>
         </div>
         <div class="leaf1">
             <div class="shapeLeaf leafGreenMiddle rotateTopBot">
@@ -278,14 +278,9 @@
     </div>
     <!-- Leaf top top container -->
     <div class="leafTopTop">
-        <div class="leaf1">
-            <div class="shapeLeaf leafGreenDark rotateTopBot">
-                <div class="line lineLeafGreenDark"></div>
-            </div>  
-        </div>
-        <div class="leaf4">
-            <div class="shapeLeaf leafWhite rotateTopBot">
-                <div class="line lineLeafWhite"></div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
             </div>
         </div>
         <div class="leaf2">
@@ -293,20 +288,20 @@
                 <div class="line lineLeafGreenMiddle"></div>
             </div>
         </div>
-        <div class="leaf3">
-            <div class="shapeLeaf leafGreenLight rotateTopBot">
-                <div class="line lineLeafLight"></div>
-            </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
         </div>
         <div class="leaf5">
             <div class="shapeLeaf leafRed rotateTopBot">
                 <div class="line lineLeafRed"></div>
             </div>
         </div>
-        <div class="leaf3">
-            <div class="shapeLeaf leafGreenDark rotateTopBot">
-                <div class="line lineLeafGreenDark"></div>
-            </div>  
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
         </div>
         <div class="leaf1">
             <div class="shapeLeaf leafGreenMiddle rotateTopBot">
@@ -318,20 +313,25 @@
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
-        <div class="leaf4">
-            <div class="shapeLeaf leafWhite rotateTopBot">
-                <div class="line lineLeafWhite"></div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
             </div>
         </div>
         <div class="leaf2">
-            <div class="shapeLeaf leafGreenLight rotateTopBot">
-                <div class="line lineLeafLight"></div>
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
             </div>
         </div>
-        <div class="leaf2">
-            <div class="shapeLeaf leafGreenLight rotateTopBot">
-                <div class="line lineLeafLight"></div>
-            </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
         </div>
         <div class="leaf4">
             <div class="shapeLeaf leafWhite rotateTopBot">
@@ -356,9 +356,9 @@
                 <div class="line lineLeafGreenMiddle"></div>
             </div>
         </div>
-        <div class="leaf3">
-            <div class="shapeLeaf leafGreenLight rotateRight">
-                <div class="line lineLeafLight"></div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateRight">
+                <div class="line lineLeafRed"></div>
             </div>
         </div>
         <div class="leaf4">
@@ -366,9 +366,9 @@
                 <div class="line lineLeafWhite"></div>
             </div>
         </div>
-        <div class="leaf5">
-            <div class="shapeLeaf leafRed rotateRight">
-                <div class="line lineLeafRed"></div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateRight">
+                <div class="line lineLeafLight"></div>
             </div>
         </div>
         <div class="leaf1">
@@ -384,24 +384,24 @@
     </div>
     <!-- Leaf right top container -->
     <div class="leafRightTop">
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateRight">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark rotateRight">
                 <div class="line lineLeafGreenDark"></div>
             </div>  
-        </div>
-        <div class="leaf2">
-            <div class="shapeLeaf leafGreenMiddle rotateRight">
-                <div class="line lineLeafGreenMiddle"></div>
-            </div>
         </div>
         <div class="leaf3">
             <div class="shapeLeaf leafGreenLight rotateRight">
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
-        <div class="leaf4">
-            <div class="shapeLeaf leafWhite rotateRight">
-                <div class="line lineLeafWhite"></div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateRight">
+                <div class="line lineLeafGreenMiddle"></div>
             </div>
         </div>
         <div class="leaf5">
@@ -420,14 +420,17 @@
             </div>
         </div>
     </div>
-
-    <!--  -->
-    <!-- Leaf bottom container -->
-    <div class="leafBot">
+    <!-- Leaf bottom bot container -->
+    <div class="leafBotBot">
         <div class="leaf1">
             <div class="shapeLeaf leafGreenDark rotateTopBot">
                 <div class="line lineLeafGreenDark"></div>
             </div>  
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
         </div>
         <div class="leaf2">
             <div class="shapeLeaf leafGreenMiddle rotateTopBot">
@@ -439,9 +442,9 @@
                 <div class="line lineLeafLight"></div>
             </div>
         </div>
-        <div class="leaf4">
-            <div class="shapeLeaf leafWhite rotateTopBot">
-                <div class="line lineLeafWhite"></div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
             </div>
         </div>
         <div class="leaf3">
@@ -452,6 +455,16 @@
         <div class="leaf1">
             <div class="shapeLeaf leafGreenMiddle rotateTopBot">
                 <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
             </div>
         </div>
         <div class="leaf2">
@@ -462,6 +475,79 @@
         <div class="leaf5">
             <div class="shapeLeaf leafRed rotateTopBot">
                 <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+    </div>
+    <!-- Leaf bottom top container -->
+    <div class="leafBotTop">
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
+            </div>
+        </div>
+        <div class="leaf3">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf5">
+            <div class="shapeLeaf leafRed rotateTopBot">
+                <div class="line lineLeafRed"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenMiddle rotateTopBot">
+                <div class="line lineLeafGreenMiddle"></div>
+            </div>
+        </div>
+        <div class="leaf1">
+            <div class="shapeLeaf leafGreenDark rotateTopBot">
+                <div class="line lineLeafGreenDark"></div>
+            </div>  
+        </div>
+        <div class="leaf4">
+            <div class="shapeLeaf leafWhite rotateTopBot">
+                <div class="line lineLeafWhite"></div>
+            </div>
+        </div>
+        <div class="leaf2">
+            <div class="shapeLeaf leafGreenLight rotateTopBot">
+                <div class="line lineLeafLight"></div>
             </div>
         </div>
     </div>
