--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
                     </div>
                 </div>
                 <div class="multTxt">
-                        <button id="hMultiplier">multiplier</button>
+                    <button id="hMultiplier">multiplier</button>
+                </div>
+                <div class="multBanana">
+                    <div class="banana"></div>
+                    <div class="banana-line"></div>
                 </div>
             </div>
         </div>
