--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                     <button id="hMultiplier">multiplier</button>
                 </div>
                 <div class="multBanana">
-                    <div class="banana"></div>
-                    <div class="banana-line"></div>
+                    <div class="bananaMult"></div>
+                    <div class="banana-lineMult"></div>
                 </div>
             </div>
         </div>
