added plank for reset btn

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div id="page">
         <div class="leftColumn"> <!-- Left column -- Contains 2 pannels (one with the game info and the second with the multiplier button-->
             <div class="rope"></div> <!-- Rope div-->
+            <div class="rope"></div>
+            <div class="rope"></div>
+            <div class="rope"></div>
+            <div class="rope"></div>
+            <div class="rope"></div>
             <div class="infos"> <!-- Pannel div-->
                 <div class="plank small"> <!-- Div creating the plank texture-->
                     <div class="texture3">
@@ -54,6 +59,10 @@
                     <div id="hPerSecond">0 banana(s)/second</div>
                 </div>
             </div>
+            <div class="rope"></div>
+            <div class="rope"></div>
+            <div class="rope"></div>
+            <div class="rope"></div>
             <div class="rope"></div>
             <div class="mult">
                 <div class="plank small">
@@ -98,9 +107,13 @@
                 <h1>Jungle Banana Jungle</h1>
                 <button id="hClick">click here</button>
                 <button id="hBonus">bonus</button>
-                <button id="hReset">reset memory</button>
         </div>
         <div class="rightColumn"> <!-- Right column -- Contains the autoclick buttons and infos-->
+                <div class="rope"></div>
+                <div class="rope"></div>
+                <div class="rope"></div>
+                <div class="rope"></div>
+                <div class="rope"></div>
                 <div class="rope"></div>
                 <div class="autoplank">
                     <div class="plank big">
@@ -142,6 +155,14 @@
                 </div>
             </div>
         </div> 
+        <div class="reset">
+            <div class="rope"></div>
+            <div class="plankReset">
+                <div class="texture2">
+                </div>
+            </div>
+            <div id="hReset">RESET DATA</div>
+        </div>
     </div>
     <!-- Leaf background -->
     <!-- Leaf left bot container -->
