--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
         </div>
         <div class="centralColumn"> <!-- Central column -- Contains the title and the banana icon-->
                 <h1>Jungle Banana Jungle</h1>
-                <button id="hClick">click here</button>
+                <div id="hClick" class="bananaItem">
+                    <div class="banana"></div>
+                    <div class="banana-line"></div>
+                </div>
                 <button id="hBonus">bonus</button>
                 <button id="hReset">reset memory</button>
         </div>
