--- a/index.html
+++ b/index.html
@@ -154,8 +154,25 @@
                         <div class="nail pos4"></div>
                     </div>
                 </div>
-                <div class="autoTxt">
-                    <button id="hAutoclick">autoclick</button>
+                <div class="auto1Txt">
+                    <div class="monkey">
+                        <div class="head"></div>
+                        <div class="earLeft">
+                            <div class="innerEarLeft"></div>
+                        </div>
+                        <div class="earRight">
+                            <div class="innerEarRight"></div>
+                        </div>
+                        <div class="lowerWhite"></div>
+                        <div class="upperWhite">
+                            <div class="eyeLeft"></div>
+                            <div class="eyeRight"></div>
+                            <div class="mouth"></div>
+                            <div class="noseLeft"></div>
+                            <div class="noseRight"></div>
+                        </div>
+                    </div>
+                    <div id="hAutoclick">autoclick</div>
                 </div>
             </div>
         </div>
