--- a/monkey.html
+++ b/monkey.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/monkey.css">
 	</head>
 	<body>
-        <div class="container">
+        <div class="monkey">
             <div class="head"></div>
             <div class="earLeft">
                 <div class="innerEarLeft"></div>
