--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.ico' />
     <title>Jungle Banana Jungle</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Acme|Staatliches" rel="stylesheet"> 
     <script type='text/javascript' src='js/main.js'></script>
 </head>
 <body>
