class hoverable added

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="multTxt">
                     <button id="hMultiplier">multiplier</button>
                 </div>
-                <div id="bananaGrappe">
+                <div id="bananaGrappe" class="hoverable">
                     <div class="multBanana3">
                         <div class="bananaMult"></div>
                         <div class="banana-lineMult"></div>
@@ -119,7 +119,7 @@
         </div>
         <div class="centralColumn"> <!-- Central column -- Contains the title and the banana icon-->
                 <h1>Jungle Banana Jungle</h1>
-                <div id="hClick" class="bananaItem">
+                <div id="hClick" class="bananaItem hoverable">
                     <div class="banana"></div>
                     <div class="banana-line"></div>
                 </div>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="auto1Txt">
-                    <div class="monkey">
+                    <div class="monkey hoverable">
                         <div class="head"></div>
                         <div class="earLeft">
                             <div class="innerEarLeft"></div>
