page width fixed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="multTxt">
-                    <button id="hMultiplier">multiplier</button>
+                    <span id="hMultiplier">multiplier</span>
                 </div>
                 <div id="bananaGrappe">
                     <div class="multBanana3">
