--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="centralColumn"> <!-- Central column -- Contains the title and the banana icon-->
-                <h1>Jungle Banana Jungle</h1>
+               <div id= TitleFont> <h1>Jungle Banana Jungle</h1> </div> 
                 <div id="hClick" class="bananaItem hoverable">
                     <div class="banana"></div>
                     <div class="banana-line"></div>
