--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
                 <div class="leftRope"></div>
                 <div class="rightRope"></div>
             </div>
+            <div class="rope">
+                <div class="leftRope"></div>
+                <div class="rightRope"></div>
+            </div>
             <div class="autoplank">
                 <div class="plank big">
                     <div class="texture1">
@@ -194,10 +198,10 @@
                 <div class="rightRope"></div>
         </div>
         <div class="plankReset">
-            <div class="texture2">
-            </div>
+            <div class="texture2"></div>
         </div>
-        <div id="hReset">RESET DATA</div>
+        <div id="hReset">
+            RESET DATA
         </div>
     </div>
     <!-- Leaf background -->
